fixed alignment of the main page

--- a/source/sass/blocks/benefits-list.scss
+++ b/source/sass/blocks/benefits-list.scss
@@ -29,6 +29,7 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    grid-template-rows: 256px;
   }
 }
 
@@ -38,7 +39,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 26px 32px;
+  padding: 2px 32px;
   background: $bg-color-secondary;
 
   @media (min-width: $tablet-width) {
@@ -80,6 +81,31 @@
   }
 }
 
+@media (max-width: $mobile-width-only) {
+  .benefits-list__br-tablet,
+  .benefits-list__br-desktop {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .benefits-list__br-mobile,
+  .benefits-list__br-desktop {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .benefits-list__br-mobile,
+  .benefits-list__br-tablet {
+    display: none;
+  }
+
+  .benefits-list__br-desktop {
+    display: block;
+  }
+}
+
 .benefits-list__sub-list {
   display: flex;
   flex-direction: column;
@@ -90,6 +116,8 @@
 
   @media (min-width: $tablet-width) {
     flex-direction: row;
+    margin-top: 0;
+    margin-bottom: 0;
   }
 }
 
@@ -115,6 +143,12 @@
     }
   }
 
+  .benefits-list__description {
+    @media (min-width: $tablet-width) {
+      margin-top: 24px;
+    }
+  }
+
   &--house::before {
     background: url("../../img/icons/icon-house.svg") no-repeat center;
 
@@ -122,7 +156,7 @@
       width: 75px;
       height: 72px;
       background-size: 75px 72px;
-      top: 63px;
+      top: 61px;
       left: calc(50% - 75px / 2);
     }
   }
@@ -130,10 +164,19 @@
   &--burger {
     .benefits-list__title {
       margin: 0 auto 16px 5px;
+
+      @media (min-width: $tablet-width) {
+        margin-left: 0;
+      }
     }
 
     .benefits-list__description {
       margin: 0 0 0 5px;
+
+      @media (min-width: $tablet-width) {
+        margin-left: 0;
+        margin-top: 23px;
+      }
     }
   }
 
@@ -144,7 +187,7 @@
       width: 76px;
       height: 68px;
       background-size: 76px 68px;
-      top: 63px;
+      top: 64px;
       left: calc(50% - 76px / 2);
     }
   }
@@ -152,10 +195,20 @@
   &--gift {
     .benefits-list__title {
       margin: 0 auto 16px -3px;
+
+      @media (min-width: $tablet-width) {
+        margin-left: 0;
+      }
     }
 
     .benefits-list__description {
       margin: 0 0 0 -3px;
+
+      @media (min-width: $tablet-width) {
+
+        margin-top: 23px;
+        margin-left: 1px;
+      }
     }
   }
 
@@ -166,8 +219,8 @@
       width: 64px;
       height: 75px;
       background-size: 64px 75px;
-      top: 57px;
-      left: calc(50% - 64px / 2);
+      top: 58px;
+      left: calc(49.5% - 64px / 2);
     }
   }
 
@@ -183,12 +236,43 @@
   }
 }
 
+@media (max-width: $mobile-width-only) {
+  .benefits-list__description-eat-br-tablet,
+  .benefits-list__description-eat-br-no-mobile,
+  .benefits-list__description-gift-br-desktop,
+  .benefits-list__description-gift-br-tablet {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .benefits-list__description-eat-br-mobile,
+  .benefits-list__description-gift-br-mobile,
+  .benefits-list__description-gift-br-desktop {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .benefits-list__description-eat-br-tablet,
+  .benefits-list__description-gift-br-mobile,
+  .benefits-list__description-gift-br-tablet {
+    display: none;
+  }
+
+  .benefits-list__description-gift-br-desktop {
+    display: block;
+  }
+}
+
+
 .benefits-list__item-wrapper--inversion {
   @media (min-width: $tablet-width) {
     grid-template-columns: repeat(3, 1fr);
 
     .benefits-list__item-order {
       order: 2;
+      padding-top: 43px;
     }
   }
 }
@@ -202,4 +286,5 @@
   border: none;
   width: 100%;
   object-fit: cover;
+  height: 256px;
 }
