--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -4,20 +4,34 @@
 
 .benefits__header {
   text-align: center;
-  padding-top: 32px;
+  padding-top: 2;
   padding-bottom: 16px;
+  position: relative;
 
   @media (min-width: $tablet-width) {
-    padding-top: 47.5px;
-    padding-bottom: 56.5px;
+    padding-top: 17px;
+    padding-bottom: 55px;
   }
 }
 
 .benefits__header-title {
   margin-top: 0;
   margin-bottom: 35px;
+  margin-right: 5px;
+
+  span {
+    line-height: 1.6;
+    margin-left: 3px;
+  }
 
   @media (min-width: $tablet-width) {
+    margin-bottom: 28px;
+
+    span {
+      line-height: 1;
+      margin-left: 5px;
+    }
+
     .order-1 {
       display: none;
     }
@@ -26,19 +40,68 @@
 
 .benefits__title {
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 2px;
+    margin-bottom: 13px;
+
+    span {
+      margin-right: 4px;
+    }
+  }
 }
 
 .benefits__header-description {
   margin: 0;
+  margin-right: 1px;
+
+  @media (min-width: $tablet-width) {
+    br {
+      display: none;
+    }
+  }
+}
+
+.benefits__description-number {
+  margin-top: 11px;
+  margin-bottom: 23px;
 }
 
 .benefits__description {
   margin: 0;
 }
 
-.benefits__description-number {
-  margin-top: 11px;
-  margin-bottom: 17px;
+.benefits__description--wrapper {
+  margin-right: 4px;
+}
+
+@media (max-width: $mobile-width-only) {
+  .benefits__description-№3-br-tablet,
+  .benefits__description-№3-br-desktop,
+  .benefits__description-№4-br-tablet,
+  .benefits__description-№4-br-desktop,
+  .benefits__description-№5-br-tablet,
+  .benefits__description-№5-br-desktop {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .benefits__description-№1-br-mobile,
+  .benefits__description-№3-br-mobile,
+  .benefits__description-№3-br-desktop,
+  .benefits__description-№4-br-mobile,
+  .benefits__description-№5-br-mobile {
+    display: none;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .benefits__description-№3-br-tablet,
+  .benefits__description-№4-br-tablet,
+  .benefits__description-№5-br-tablet {
+    display: none;
+  }
 }
 
 .benefits__wrapper {
