--- a/source/sass/blocks/developed.scss
+++ b/source/sass/blocks/developed.scss
@@ -23,5 +23,6 @@
 .developed__html-academy {
   .developed__html-academy-icon {
     margin-left: 13px;
+    margin-top: 4px;
   }
 }
