--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -34,6 +34,16 @@
       margin: 0 auto;
     }
   }
+
+  .main-footer__developed {
+    margin-bottom: 36.9px;
+    margin-right: 2px;
+  }
+
+  .main-footer__text {
+    margin-bottom: 26.5px;
+    margin-left: 3px;
+  }
 }
 
 @media (min-width: $desktop-width) {
