--- a/source/sass/blocks/page-image.scss
+++ b/source/sass/blocks/page-image.scss
@@ -18,7 +18,7 @@
     background-image: url("../../img/icons/intro-triangle.svg");
     background-repeat: no-repeat;
     background-position: center;
-    bottom: -0.75px;
+    bottom: 0;
     right: 50%;
     box-shadow: 0 2px 2px 0 $bg-color;
   }
@@ -41,12 +41,14 @@
 
   &__text-image {
     position: absolute;
-    top: 48%;
-    right: 50%;
+    top: 50.5%;
+    right: 49.8%;
     transform: translate(50%, -50%);
     display: block;
 
     @media (min-width: $tablet-width) {
+      top: 48.55%;
+      right: 50.05%;
       width: 461px;
       height: 350px;
     }
