--- a/source/sass/blocks/search-hotel.scss
+++ b/source/sass/blocks/search-hotel.scss
@@ -39,12 +39,13 @@
   }
 
   .search-hotel__heading {
-    margin-top: 61px;
-    margin-bottom: 24px;
+    font-size: 30px;
+    margin-top: 64px;
+    margin-bottom: 35px;
   }
 
   .search-hotel__description {
-    margin-bottom: 41px;
+    margin-bottom: 40px;
   }
 
   .search-hotel__description-br--mobile {
