--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -2,8 +2,8 @@
   font-family: "PT Sans";
   font-weight: 400;
   font-style: normal;
-  src: url("../../fonts/ptsans.woff2") format("woff2"),
-    url("../../fonts/ptsans.woff") format("woff");
+  src: url("../fonts/ptsans.woff2") format("woff2"),
+    url("../fonts/ptsans.woff") format("woff");
   font-display: swap;
 }
 
@@ -11,8 +11,8 @@
   font-family: "PT Sans";
   font-weight: 700;
   font-style: normal;
-  src: url("../../fonts/ptsansbold.woff2") format("woff2"),
-    url("../../fonts/ptsansbold.woff") format("woff");
+  src: url("../fonts/ptsansbold.woff2") format("woff2"),
+    url("../fonts/ptsansbold.woff") format("woff");
   font-display: swap;
 }
 
